# mitnika

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
commons/: Cargo.toml
commons/src/: environment.rs  error.rs  file_handler.rs  lib.rs  project.rs  storage.rs  version.rs
mitnika-cli/: Cargo.toml
mitnika-cli/src/: main.rs
mitnika-core/: Cargo.toml
mitnika-core/src/: environment.rs  error.rs  file_details.rs  lib.rs  project.rs  storage.rs  version.rs
mitnika-core/src/storage/: file_handler.rs  sqlite_handler.rs
mitnika-gui/: Cargo.toml
mitnika-gui/src/: app.rs  lib.rs  main.rs  message.rs  state.rs  view.rs
mitnika-gui/src/view/: file.rs  project.rs
