[workspace]
members = ["commons", "mitnika-cli", "mitnika-gui"]
resolver = "2"
default-members = ["mitnika-cli"]

[workspace.package]
version = "0.1.0"
repository = ""
authors = ["Mimanshu Maheshwari <maheshwarimimanshu@gmail.com>"]
description = "Secrets Manager: to manage secrets file in local for personal projects."
rust-version = "1.83.0"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3

[workspace.dependencies]
commons = { path = "commons" }
cli = { path = "mitnika-cli" }
