[workspace]
members = ["mitnika-*"]
resolver = "2"
default-members = ["mitnika-cli"]

[workspace.package]
version = "0.1.0"
authors = ["Mimanshu Maheshwari <maheshwarimimanshu@gmail.com>"]
description = "Secrets Manager: to manage secrets file in local for personal projects."
rust-version = "1.83.0"
repository = "https://github.com/mimanshu-maheshwari/mitnika"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3

[workspace.dependencies]
# mitnika selfs
core = { path = "mitnika-core" }
cli = { path = "mitnika-cli" }
gui = { path = "mitnika-gui" }
