[package]
name = "mitnika-gui"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
dirs-next = "2.0"
iced = { version = "^0.13", features = ["image"] }
commons = { path = "../commons" }

[build-dependencies]
iced_fontello = "0.13"
