[package]
name = "mitnika-gui"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
# iced gui
iced = { version = "^0.13", features = ["image"] }

# mitnika deps
commons = { path = "../commons" }

# utils
dirs-next = "2.0"
once_cell = "1.20.2"

[build-dependencies]
iced_fontello = "0.13"
